--- a/packages/docs/pages/lib/js.mdx
+++ b/packages/docs/pages/lib/js.mdx
@@ -4,11 +4,15 @@ Supports both browser and NodeJS environments.
 
 ## Installation
 
-`yarn add @growthbook/growthbook`
+```
+yarn add @growthbook/growthbook
+```
 
 or
 
-`npm install --save @growthbook/growthbook`
+```
+npm i --save @growthbook/growthbook
+```
 
 or use directly in your HTML without installing first:
 
@@ -24,60 +28,454 @@ or use directly in your HTML without installing first:
 ```ts
 import { GrowthBook } from "@growthbook/growthbook";
 
-// Define the experimental context
-const growthbook = new GrowthBook({
-  // The attributes used to assign variations
-  user: { id: "123" },
-  // Called when a user is put into an experiment
+// Create a GrowthBook context
+const growthbook = new GrowthBook();
+
+// Load feature definitions (from API, database, etc.)
+fetch("https://s3.amazonaws.com/myBucket/features.json")
+  .then((res) => res.json())
+  .then((parsed) => {
+    growthbook.setFeatures(parsed);
+  });
+
+// Simple on/off feature flag
+if (growthbook.feature("my-feature").on) {
+  console.log("Feature enabled!");
+}
+
+// Feature with multiple possible values
+const color = growthbook.feature("button-color").value || "blue";
+```
+
+## The GrowthBook Context
+
+The `GrowthBook` constructor takes a number of optional settings.
+
+### Features
+
+If you already have features loaded as a JSON object, you can pass them into the constructor with the `features` field:
+
+```ts
+new GrowthBook({
+  features: {
+    "feature-1": {...},
+    "feature-2": {...},
+    "another-feature": {...},
+  }
+})
+```
+
+If you need to load feature definitions from a remote source like an API or database, you can update the context at any time with `setFeatures()` (seen above in the Quick Start).
+
+If you use the GrowthBook App to manage your features, you don't need to build this JSON file yourself - it will auto-generate one for you and make it available via an API endpoint.
+
+If you prefer to build this file by hand or you want to know how it works under the hood, check out the detailed [Feature Definitions](#feature-definitions) section below.
+
+### Attributes
+
+You can specify attributes about the current user and request. These are used for two things:
+
+1.  Feature targeting (e.g. paid users get one value, free users get another)
+2.  Assigning persistent variations in A/B tests (e.g. user id "123" always gets variation B)
+
+Attributes can be any JSON data type - boolean, integer, string, array, or object. If you know them up front, you can pass them into the constructor with the `attributes` field:
+
+```ts
+new GrowthBook({
+  attributes: {
+    id: "123",
+    loggedIn: true,
+    deviceId: "abc123def456",
+    company: "acme",
+    paid: false,
+    url: "/pricing",
+    browser: "chrome",
+    mobile: false,
+    country: "US",
+  },
+});
+```
+
+You can also set or update attributes asynchronously at any time with the `setAttributes` method. This will completely overwrite the attributes object with whatever you pass in. If you want to merge attributes instead, you can get the existing ones with `getAttributes`:
+
+```ts
+// Only update the url attribute
+growthbook.setAttributes({
+  ...growthbook.getAttributes(),
+  url: "/checkout",
+});
+```
+
+Be aware that changing attributes may change the assigned feature values. This can be disorienting to users if not handled carefully. A common approach is to only refresh attributes on navigation, when the window is focused, and/or after a user performs a major action like logging in.
+
+### Tracking Callback
+
+Any time an experiment is run to determine the value of a feature, we can run a callback function so you can record the assigned value in your event tracking or analytics system of choice.
+
+```ts
+new GrowthBook({
   trackingCallback: (experiment, result) => {
+    // Example using Segment.io
     analytics.track("Experiment Viewed", {
       experimentId: experiment.key,
       variationId: result.variationId,
     });
   },
 });
-
-// Run an experiment
-const { value } = growthbook.run({
-  key: "my-experiment",
-  variations: ["A", "B"],
-});
-
-console.log(value); // "A" or "B"
 ```
 
-## GrowthBook class
+## Using Features
 
-The GrowthBook constructor takes a `Context` object. Below are all of the possible Context properties:
+The main method, `growthbook.feature(key)` takes a feature key and returns an object with a few properties:
 
-- **enabled** (`boolean`) - Switch to globally disable all experiments. Default true.
-- **user** (`{}`) - Map of user attributes that are used to assign variations
-- **groups** (`{}`) - A map of which groups the user belongs to (key is the group name, value is boolean)
-- **url** (`string`) - The URL of the current page (defaults to `window.location.href` when in a browser environment)
-- **overrides** (`{}`) - Override properties of specific experiments (used for Remote Config)
-- **forcedVariations** (`{}`) - Force specific experiments to always assign a specific variation (used for QA)
-- **qaMode** (`boolean`) - If true, random assignment is disabled and only explicitly forced variations are used.
-- **trackingCallback** (`function`) - A function that takes `experiment` and `result` as arguments.
+- **value** - The JSON value of the feature (or `null` if not defined)
+- **on** and **off** - The JSON value cast to booleans (to make your code easier to read)
+- **source** - Why the value was assigned to the user. One of `unknownFeature`, `defaultValue`, `force`, or `experiment`
+- **experiment** - Information about the experiment (if any) which was used to assign the value to the user
 
-## Experiments
+Here's an example that uses all of them:
 
-Below are all of the possible properties you can set for an Experiment:
+```ts
+const result = growthbook.feature("my-feature");
 
-- **key** (`string`) - The globally unique tracking key for the experiment
-- **variations** (`any[]`) - The different variations to choose between
-- **weights** (`number[]`) - How to weight traffic between variations. Must add to 1.
-- **status** (`string`) - "running" is the default and always active. "draft" is only active during QA and development. "stopped" is only active when forcing a winning variation to 100% of users.
-- **coverage** (`number`) - What percent of users should be included in the experiment (between 0 and 1, inclusive)
-- **namespace** (`[string, number, number]`) - A more powerful version of `coverage` that lets you run mutually exclusive experiments. For example, two experiments with namespaces `["pricing", 0, 0.5]` and `["pricing", 0.5, 1]` would be mutually exclusive and each include 50% of users.
-- **url** (`RegExp`) - Users can only be included in this experiment if the current URL matches this regex
-- **include** (`() => boolean`) - A callback that returns true if the user should be part of the experiment and false if they should not be
-- **groups** (`string[]`) - Limits the experiment to specific user groups
-- **force** (`number`) - All users included in the experiment will be forced into the specific variation index
-- **hashAttribute** (`string`) - What user attribute should be used to assign variations (defaults to "id")
+// The JSON value (might be null, string, boolean, number, array, or object)
+console.log(result.value);
 
-## Running Experiments
+if (result.on) {
+  // Feature value is truthy
+}
+if (result.off) {
+  // Feature value is falsy
+}
 
-Run experiments by calling `growthbook.run(experiment)` which returns an object with a few useful properties:
+// If the feature value was assigned as part of an experiment
+if (result.source === "experiment") {
+  // Get all the possible variations that could have been assigned
+  console.log(experiment.variations);
+}
+```
+
+## Feature Definitions
+
+The feature definition JSON file contains information about all of the features in your application.
+
+Each feature consists of a unique key, a list of possible values, and rules for how to assign those values to users.
+
+```ts
+{
+  "feature-1": {...},
+  "feature-2": {...},
+  "another-feature": {...},
+}
+```
+
+### Basic Feature
+
+An empty feature always has the value `null`:
+
+```js
+{
+  "my-feature": {}
+}
+```
+
+#### Default Values
+
+You can change the default assigned value with the `defaultValue` property:
+
+```js
+{
+  "my-feature": {
+    defaultValue: "green"
+  }
+}
+```
+
+### Override Rules
+
+You can override the default value with **rules**.
+
+Rules give you fine-grained control over how feature values are assigned to users. There are 2 types of feature rules: `force` and `experiment`. Force rules give the same value to everyone. Experiment rules assign values to users randomly.
+
+#### Rule Conditions
+
+Rules can optionally define targeting conditions that limit which users the rule applies to. These conditions are evaluated against the `attributes` passed into the GrowthBook context. The syntax for conditions is based on the MongoDB query syntax and is straightforward to read and write.
+
+For example, if the attributes are:
+
+```json
+{
+  "id": "123",
+  "browser": {
+    "vendor": "firefox",
+    "version": 94
+  },
+  "country": "CA"
+}
+```
+
+The following condition would evaluate to `true`:
+
+```json
+{
+  "browser.vendor": "firefox",
+  "country": {
+    "$in": ["US", "CA", "IN"]
+  }
+}
+```
+
+If a condition evaluates to `false`, the rule will be skipped. This means you can chain rules together with different conditions to support even the most complex use cases.
+
+#### Force Rules
+
+Force rules do what you'd expect - force a specific value for the feature
+
+```js
+// Firefox users in the US or Canada get "green"
+// Everyone else gets the default "blue"
+{
+  "button-color": {
+    defaultValue: "blue",
+    rules: [
+      {
+        condition: {
+          browser: "firefox",
+          country: {
+            $in: ["US", "CA"]
+          }
+        },
+        force: "green"
+      }
+    ],
+  }
+}
+```
+
+##### Gradual Rollouts
+
+You can specify a `coverage` value for your rule, which is a number between 0 and 1 and represents what percent of users will get the rule applied to them. Users who do not get the rule applied will fall through to the next matching rule (or default value).
+
+This is useful for gradually rolling out features to users (start coverage at 0 and slowly increase towards 1 as you watch metrics).
+
+```js
+// 20% of users will get the new feature
+{
+  "new-feature": {
+    defaultValue: false,
+    rules: [
+      {
+        force: true,
+        coverage: 0.2
+      }
+    ]
+  }
+}
+```
+
+In order to figure out if a user is included or not, we use deterministic hashing. By default, we use the user attribute `id` for this, but you can override this by specifying `hashAttribute` for the rule:
+
+```js
+// 20% of companies will get the new feature
+// Users in the same company will always get the same value (either true or false)
+{
+  "new-feature": {
+    defaultValue: false,
+    rules: [
+      {
+        force: true,
+        coverage: 0.2,
+        hashAttribute: "company"
+      }
+    ]
+  }
+}
+```
+
+#### Experiment Rules
+
+Experiment rules let you adjust the percent of users who get randomly assigned to each variation. This can either be used for hypothesis-driven A/B tests or to simply mitigate risk by gradually rolling out new features to your users.
+
+```js
+// Each variation gets assigned to a random 1/3rd of users
+{
+  "image-size": {
+    rules: [
+      {
+        variations: ["small", "medium", "large"]
+      }
+    ]
+  }
+}
+```
+
+##### Weights
+
+You can use the `weights` setting to control what percent of users get assigned to each variation. Weights determine the traffic split between variations and must add to 1.
+
+```js
+{
+  "results-per-page": {
+    rules: [
+      {
+        variations: ["small", "medium", "large"],
+        // 50% of users will get "small" (index 0)
+        // 30% will get "medium" (index 1)
+        // 20% will get "large" (index 2)
+        weights: [0.5, 0.3, 0.2]
+      }
+    ]
+  }
+}
+```
+
+##### Tracking Key
+
+When a user is assigned a variation, we call the `trackingCallback` function so you can record the exposure with your analytics event tracking system. By default, we use the feature id to identify the experiment, but this can be overridden if needed with the `key` setting:
+
+```js
+{
+  "feature-1": {
+    rules: [
+      {
+        // Use "my-experiment" as the key instead of "feature-1"
+        key: "my-experiment",
+        variations: ["A", "B"]
+      }
+    ]
+  },
+}
+```
+
+##### Hash Attribute
+
+We use deterministic hashing to make sure the same user always gets assigned the same value. By default, we use the attribute `id`, but this can be overridden with the `hashAttribute` setting:
+
+```js
+const growthbook = new GrowthBook({
+  attributes: {
+    id: "123",
+    company: "acme",
+  },
+  features: {
+    "my-feature": {
+      rules: [
+        // All users with the same "company" value
+        // will be assigned the same variation
+        {
+          variations: ["A", "B"],
+          hashAttribute: "company",
+        },
+        // If "company" is empty for the user (e.g. if they are logged out)
+        // The experiment will be skipped and fall through to this next rule
+        {
+          force: "A",
+        },
+      ],
+    },
+  },
+});
+```
+
+##### Coverage
+
+You can use the `coverage` setting to introduce sampling and reduce the percent of users who are included in your experiment. Coverage must be between 0 and 1 and defaults to 1 (everyone included). This feature uses deterministic hashing to ensure consistent sampling.
+
+```js
+{
+  "my-feature": {
+    rules: [
+      // 80% of users will be included in the experiment
+      {
+        variations: [false, true],
+        coverage: 0.8
+      },
+      // The remaining 20% will fall through to this next matching rule
+      {
+        force: false
+      }
+    ]
+  }
+}
+```
+
+##### Namespaces
+
+Sometimes you want to run multiple conflicting experiments at the same time. You can use the `namespace` setting to run mutually exclusive experiments.
+
+We do this using deterministic hashing to assign users a value between 0 and 1 for each namespace. Experiments can specify which namespace it is in and what part of the range [0,1] it should include. If the ranges for two experiments in a namespace don't overlap, they will be mutually exclusive.
+
+```js
+{
+  "feature1": {
+    rules: [
+      // Will include 60% of users - ones with a hash between 0 and 0.6
+      {
+        variations: [false, true],
+        namespace: ["pricing", 0, 0.6]
+      }
+    ]
+  },
+  "feature2": {
+    rules: [
+      // Will include the other 40% of users - ones with a hash between 0.6 and 1
+      {
+        variations: [false, true],
+        namespace: ["pricing", 0.6, 1]
+      },
+    ]
+  }
+}
+```
+
+**Note** - If a user is excluded from an experiment due to the namespace range, the rule will be skipped and the next matching rule will be used instead.
+
+## Inline Experiments
+
+Instead of declaring all features up-front in the context and referencing them by ids in your code, you can also just run an experiment directly. This is done with the `growthbook.run` method:
+
+```js
+const { value } = growthbook.run({
+  key: "my-experiment",
+  variations: ["red", "blue", "green"],
+});
+```
+
+All of the other settings (`weights`, `hashAttribute`, `coverage`, `namespace`, `condition`) are supported when using inline experiments.
+
+In addition, there are a few other settings that only really make sense for inline experiments:
+
+- `force` can be set to one of the variation array indexes. Everyone will be immediately assigned the specified value.
+- `active` can be set to false to disable the experiment and return the control for everyone
+- `include` is a callback function that returns a boolean for whether or not someone should be included in the experiment. It's a more flexible alternative to the declarative rules in `condition`
+
+### Overrides for Inline Experiments
+
+With Inline Experiments, you typically need to deploy new code anytime you want to make a change. For example, if an experiment wins and you want to roll it out to 100% of users.
+
+As a short-term alternative, you can pass `experimentOverrides` into the context. If you pull these overrides from a database or API, you can effectively control experiments remotely in realtime without deploying new code.
+
+```js
+const growthbook = new GrowthBook({
+  experimentOverrides: {
+    "my-experiment": {
+      force: 1
+    }
+  },
+  ...
+})
+
+// The inline experiment says to do a 50/50 split
+// Instead, everyone will be assigned "b" because of the override
+const {value} = growthbook.run({
+  key: "my-experiment",
+  variations: ["a", "b"]
+})
+```
+
+### Inline Experiment Return Value
+
+A call to `growthbook.run(experiment)` returns an object with a few useful properties:
 
 ```ts
 const {
@@ -109,185 +507,28 @@ console.log(hashValue); // e.g. "123"
 
 The `inExperiment` flag is only set to true if the user was randomly assigned a variation. If the user failed any targeting rules or was forced into a specific variation, this flag will be false.
 
-### Example Experiments
-
-3-way experiment with uneven variation weights:
-
-```ts
-growthbook.run({
-  key: "3-way-uneven",
-  variations: ["A", "B", "C"],
-  weights: [0.5, 0.25, 0.25],
-});
-```
-
-Slow rollout (10% of users who opted into "beta" features):
-
-```ts
-// User is in the "qa" and "beta" groups
-const growthbook = new GrowthBook({
-  user: { id: "123" },
-  groups: {
-    qa: isQATester(),
-    beta: betaFeaturesEnabled(),
-  },
-});
-
-growthbook.run({
-  key: "slow-rollout",
-  variations: ["A", "B"],
-  coverage: 0.1,
-  groups: ["beta"],
-});
-```
-
-Complex variations and custom targeting
-
-```ts
-const {value} = growthbook.run({
-  key: "complex-variations",
-  variations: [
-    {color: "blue", size: "large"},
-    {color: "green", size: "small"}
-  ],
-  url: /^\/post\/[0-9]+$/i
-  include: () => isPremium || creditsRemaining > 50
-});
-
-console.log(value.color, value.size); // blue,large OR green,small
-```
-
-Assign variations based on something other than user id
-
-```ts
-const growthbook = new GrowthBook({
-  user: {
-    id: "123",
-    company: "growthbook",
-  },
-});
-
-growthbook.run({
-  key: "by-company-id",
-  variations: ["A", "B"],
-  hashAttribute: "company",
-});
-
-// Users in the same company will always get the same variation
-```
-
-### Overriding Experiment Configuration
-
-It's common practice to adjust experiment settings after a test is live. For example, slowly ramping up traffic, stopping a test automatically if guardrail metrics go down, or rolling out a winning variation to 100% of users.
-
-For example, to roll out a winning variation to 100% of users:
-
-```ts
-const growthbook = new GrowthBook({
-  user: { id: "123" },
-  overrides: {
-    "experiment-key": {
-      status: "stopped",
-      force: 1,
-    },
-  },
-});
-
-const { value } = growthbook.run({
-  key: "experiment-key",
-  variations: ["A", "B"],
-});
-
-console.log(value); // Always "B"
-```
-
-The full list of experiment properties you can override is:
-
-- status
-- force
-- weights
-- coverage
-- namespace
-- groups
-- url (can use string instead of regex if serializing in a database)
-
-If you use the GrowthBook App (https://github.com/growthbook/growthbook) to manage experiments, there's a built-in API endpoint you can hit that returns overrides in this exact format. It's a great way to make sure your experiments are always up-to-date.
-
 ## Typescript
 
-This module exposes Typescript types if needed.
+Feature values are `any` by default, but you can specify a more restrictive type if you want:
 
-This is especially useful if experiments are defined as a variable before being passed into `growthbook.run`. Unions and tuples are used heavily and Typescript has trouble inferring those properly.
+```ts
+// color will be type `string|null`
+const color = growthbook.feature<string>("button-color").value;
+```
+
+There are a number of types you can import as well if needed:
 
 ```ts
 import type {
   Context,
+  ConditionInterface,
   Experiment,
-  Result,
   ExperimentOverride,
+  FeatureDefinition,
+  FeatureResult,
+  ExperimentResult,
 } from "@growthbook/growthbook";
-
-// The "number" part refers to the variation type
-const exp: Experiment<number> = {
-  key: "my-test",
-  variations: [0, 1],
-  status: "stoped", // Type error! (should be "stopped")
-};
 ```
-
-## Event Tracking and Analyzing Results
-
-This library only handles assigning variations to users. The 2 other parts required for an A/B testing platform are Tracking and Analysis.
-
-### Tracking
-
-It's likely you already have some event tracking on your site with the metrics you want to optimize (Google Analytics, Segment, Mixpanel, etc.).
-
-For A/B tests, you just need to track one additional event - when someone views a variation.
-
-```ts
-// Specify a tracking callback when instantiating the client
-const growthbook = new GrowthBook({
-  user: { id: "123" },
-  trackingCallback: (experiment, result) => {
-    // ...
-  },
-});
-```
-
-Below are examples for a few popular event tracking tools:
-
-#### Google Analytics
-
-```ts
-ga("send", "event", "experiment", experiment.key, result.variationId, {
-  // Custom dimension for easier analysis
-  dimension1: `${experiment.key}::${result.variationId}`,
-});
-```
-
-#### Segment
-
-```ts
-analytics.track("Experiment Viewed", {
-  experimentId: experiment.key,
-  variationId: result.variationId,
-});
-```
-
-#### Mixpanel
-
-```ts
-mixpanel.track("$experiment_started", {
-  "Experiment name": experiment.key,
-  "Variant name": result.variationId,
-});
-```
-
-### Analysis
-
-Now just connect GrowthBook to the data source where your tracked events end up (Mixpanel, GA, or a data warehouse like Snowflake)
-and you can pull the data, run it through the built-in stats engine, and analyze results.
 
 ## Dev Mode
 
